# virtusdev

./: .gitignore  Cargo.toml  MIGRATION.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  build.sh  keyboard_writer  keyboard_writer.c  run.sh  virtual_keyboard  virtual_keyboard.c  virtusdev.c  virtusdev.service
.github/workflows/: c-cpp.yml
devices/: barcode.c  barcode.h  device_interface.h  mouse_jiggle.c  mouse_jiggle.h  rs232.c  rs232.h  usb_keyboard.c  usb_keyboard.h
legacy/: README.md  device_config.h
scripts/: compile.sh  demo.sh  get_device_path.sh  quick_diagnostic.sh  receive_barcodes.sh  test_evdev_reader.py  test_functionality.sh  test_output.sh
src/: bill_emulator.rs  device.rs  essp_protocol.rs  lib.rs  main.rs  serial_bridge.rs
